<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/normal_bg_color"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center">

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="@dimen/normal_space" >

                <EditText
                    android:id="@+id/et_my_collect_content"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:minLines="3"
                    android:maxLines="5"
                    android:scrollbars="vertical"
                    android:hint="@string/my_collect_content"
                    android:background="@android:drawable/edit_text"
                    >
                </EditText>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <Button
                android:id="@+id/bt_my_collect_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/btn_login_selector"
                android:enabled="false"
                android:text="@string/my_collect_confirm"
                android:textColor="@color/white" />
        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="@dimen/normal_space"
            android:text="@string/title_activity_my_collect"
            android:textColor="#000"
            android:textSize="@dimen/title_text_size" />

        <ImageView
            android:id="@+id/my_collect_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@mipmap/ic_back_u" />
    </FrameLayout>


</LinearLayout>
